src/CAPI/CAPI_PDElements.pas


//------------------------------------------------------------------------------
procedure _PDElements_Get_AllNum_x(DSS: TDSSContext; var ResultPtr: PInteger; ResultCount: PAPISize; const what: Integer);
var
    idx_before, numEnabled: Integer;
    pElem: TPDElement;
    pList: TDSSPointerList;
    pval: PAPISize;
begin
    if InvalidCircuit(DSS) then
    begin
        DefaultResult(ResultPtr, ResultCount, -1);
        Exit;
    end;
    pList := DSS.ActiveCircuit.PDElements;
    if pList.Count <= 0 then
    begin
        DefaultResult(ResultPtr, ResultCount, -1);
        Exit;
    end;
    
    idx_before := pList.ActiveIndex;
    numEnabled := pList.Count;
//    for pElem in pList do
//    begin
//        if pElem.Enabled then 
//            Inc(numEnabled);
//    end;
    DSS_RecreateArray_PInteger(ResultPtr, ResultCount, numEnabled);
    pval := ResultPtr;
    
    case what of
        0:
            for pElem in pList do
            begin
                // if pElem.Enabled then
                begin
                    pval^ := pElem.NPhases;
                    Inc(pval);
                end;
            end;
        1:
            for pElem in pList do
            begin
                // if pElem.Enabled then
                begin
                    pval^ := pElem.Nconds;
                    Inc(pval);
                end;
            end;
        2:
            for pElem in pList do
            begin
                // if pElem.Enabled then
                begin
                    pval^ := pElem.Nterms;
                    Inc(pval);
                end;
            end;
    end;
        
    if (idx_before > 0) and (idx_before <= pList.Count) then
        pList.Get(idx_before);
end;
//------------------------------------------------------------------------------
procedure PDElements_Get_AllNumPhases(var ResultPtr: PInteger; ResultCount: PAPISize); CDECL;
begin
    _PDElements_Get_AllNum_x(DSSPrime, ResultPtr, ResultCount, 0);
end;

procedure PDElements_Get_AllNumPhases_GR(); CDECL;
// Same as PDElements_Get_AllNumPhases but uses global result (GR) pointers
begin
    PDElements_Get_AllNumPhases(DSSPrime.GR_DataPtr_PInteger, @DSSPrime.GR_Counts_PInteger[0]);
end;

//------------------------------------------------------------------------------
procedure PDElements_Get_AllNumConductors(var ResultPtr: PInteger; ResultCount: PAPISize); CDECL;
begin
    _PDElements_Get_AllNum_x(DSSPrime, ResultPtr, ResultCount, 1);
end;

procedure PDElements_Get_AllNumConductors_GR(); CDECL;
// Same as PDElements_Get_AllNumConductors but uses global result (GR) pointers
begin
    PDElements_Get_AllNumConductors(DSSPrime.GR_DataPtr_PInteger, @DSSPrime.GR_Counts_PInteger[0]);
end;

//------------------------------------------------------------------------------
procedure PDElements_Get_AllNumTerminals(var ResultPtr: PInteger; ResultCount: PAPISize); CDECL;
begin
    _PDElements_Get_AllNum_x(DSSPrime, ResultPtr, ResultCount, 2);
end;

procedure PDElements_Get_AllNumTerminals_GR(); CDECL;
// Same as PDElements_Get_AllNumPhases but uses global result (GR) pointers
begin
    PDElements_Get_AllNumTerminals(DSSPrime.GR_DataPtr_PInteger, @DSSPrime.GR_Counts_PInteger[0]);
end;

//------------------------------------------------------------------------------

end.
